# SO_projekt_12

./: .gitignore  CMakeLists.txt  Makefile  Product.c  Product.h  main.c  piekarnia  podajnik.c
include/: Product.h  baker.h  cash_register.h  cashier.h  client.h  dispenser.h  global.h  logs.h  main.h  manager.h  queue_types.h  queue_utils.h  shared_memory.h
logs/26_01_2025_21-25-16/: main.txt
src/: Product.c  SO_projekt  baker.c  cash_register.c  cashier.c  client.c  dispenser.c  global.c  logs.c  main.c  manager.c  queue_utils.c  run_main.c  shared_memory.c
